ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: army-reference-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: army-reference
          servicePort: 80
